--- a/public/manifest.json
+++ b/public/manifest.json
@@ -7,5 +7,6 @@
   "action": {
     "default_popup": "index.html",
     "default_title": "Yumazoo"
-  }
+  },
+  "host_permissions": ["https://*.platformsh.site/*"]
 }
