--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,12 @@
     ],
     "module": "ESNext",
     "skipLibCheck": true,
+    "paths": {
+      "@/*": [
+        "*"
+      ]
+    },
+    "baseUrl": "./src",
     /* Bundler mode */
     "moduleResolution": "bundler",
     "allowImportingTsExtensions": true,
