--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "@tanstack/react-query": "^5.17.12",
     "clsx": "^2.1.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-hook-form": "^7.49.3"
   },
   "devDependencies": {
+    "@tailwindcss/forms": "^0.5.7",
     "@tanstack/react-query-devtools": "^5.17.12",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
